--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jsbeautifier": "^0.2.7"
+    "grunt-jsbeautifier": "^0.2.7",
+    "request_animation_frame": "git://github.com/nathanfaucett/request_animation_frame.git"
   },
   "dependencies": {
     "color": "nathanfaucett/color",
