--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "example": "comn -f example/index.js -o example/index.min.js"
   },
   "author": "Nathan Faucett",
-  "license": "BSD-2-Clause",
+  "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
     "grunt": "^0.4.5",
