--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "webgl_context.js"
   ],
   "scripts": {
-    "example": "comn -f example/index.js -o example/index.min.js"
+    "example": "comn -f ./example/index.js -o ./example/index.min.js"
   },
   "author": "Nathan Faucett",
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
+    "comn": "git://github.com/nathanfaucett/comn.git",
     "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jsbeautifier": "^0.2.7",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-jsbeautifier": "^0.2.10",
     "request_animation_frame": "git://github.com/nathanfaucett/request_animation_frame.git"
   },
   "dependencies": {
