fix npm github deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
-  - "4.1"
-  - "4.0"
-  - "0.12"
+  - "6"
+  - "6.1"
+  - "stable"
   - "iojs"
 
-before_install: npm install -g grunt-cli
+before_install: npm install -g @nathanfaucett/task-cli
 
-script: 'grunt jshint && npm test'
+script: 'task jshint && npm test'
